# life-plus

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
.devcontainer/: devcontainer.json
backend/: Cargo.toml
backend/src/: lib.rs
settings/: settings.toml
simulator/: Cargo.toml
simulator/src/: cell.rs  lib.rs  neighborhood.rs
src/: components.rs  life.rs  main.rs  settings.rs  util.rs
src/life/: backend.rs  frontend.rs  universe.rs
src/life/backend/: population.rs
src/life/backend/population/: cell.rs
src/life/frontend/: settings.rs  universe.rs  util.rs
src/life/frontend/universe/: grid.rs  population.rs
src/life/frontend/universe/grid/: line.rs
src/life/frontend/universe/population/: cell.rs
src/life/universe/: grid.rs  population.rs
src/life/universe/grid/: line.rs
src/life/universe/population/: cell.rs
