[package]
name = "life-plus"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = "0.4.0"
dioxus-fullstack = "0.4.1"
chrono = {version = "0.4.*", features = ["serde"]}
serde = "1.0.*"
futures = "*"
reqwest = {version = "*", features = ["json"]}
async-recursion = "*"
rand = "0.8.5"

[features]
default = []
ssr = ["dioxus-fullstack/axum"]
web = ["dioxus-fullstack/web"]
