[package]
name = "life-plus"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = "0.4.0"
dioxus-fullstack = "0.4.1"
getrandom = { version = "0.2.10", features = ["js"] }
serde = { version = "1.0.*", features = ["derive"] }
toml = "0.8.2"

[features]
default = []
ssr = ["dioxus-fullstack/axum"]
web = ["dioxus-fullstack/web"]
