[package]
name = "life-plus"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/PedroHBrasil/life-plus"

[dependencies]
dioxus = "0.4.0"
dioxus-web = "0.4.0"
rand = "0.8.5"
getrandom = { version = "0.2.10", features = ["js"] }
serde = { version = "1.0.*", features = ["derive"] }
toml = "0.8.2"

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"

console_error_panic_hook = "0.1.7"
web-sys = "0.3.64"
