[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Pedro H. Brasil <pedrohbrasil7@gmail.com>"]
description = "Backend of the Life Plus project"
license = "MIT"
repository = "https://github.com/PedroHBrasil/life-plus"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"